New whapa-gui.py v1.16 and whapa.py v1.2.
* New 'whautils.py' library for improved creation and reading of 'settings.cfg' file.
* More options available in 'settings.cfg'.
* Thumbnail images are now displayed maintaining the aspect ratio.
* Removed unused code from reports.
* Fixed update notification.
* Added the shell script 'reports2pdf.sh' to convert all HTML reports into PDF files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Auth: Joe Broesele
 # Mod.: Joe Broesele
 # Date: 28 Apr 2020
-# Rev.: 02 May 2020
+# Rev.: 06 May 2020
 #
 # List of files to be ignored by git.
 #
@@ -33,7 +33,13 @@ reports/
 key
 msgstore.db.crypt12
 msgstore.db
+msgstore_merge.db
 wa.db
+*.db
+*.crypt12
+
+# PDF directory.
+/PDF/
 
 # Temporary directory.
 /tmp/
