--- a/cfg/settings.cfg.example
+++ b/cfg/settings.cfg.example
@@ -12,6 +12,12 @@ prefix = report_
 bg_index = ./images/background-index.png
 bg_report = ./images/background.png
 preview_pics_size = 100
+profile_pics_enable = yes
+profile_pics_size_report = 128
+profile_pics_size_index = 48
+profile_pics_dir = ./Media/Profile Pictures/
+profile_pic_user = ./images/profile-pic-user.jpg
+profile_pic_group = ./images/profile-pic-group.jpg
 
 [auth]
 gmail = alias@gmail.com
