New whapa-gui.py v1.20 and whapa.py v1.6.
* Reports can now be created in German.
* Fixed the Google real time location for reports in English.
* Some fixes and improvements, mainly related to support different languages.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Auth: Joe Broesele
 # Mod.: Joe Broesele
 # Date: 28 Apr 2020
-# Rev.: 07 May 2020
+# Rev.: 16 May 2020
 #
 # List of files to be ignored by git.
 #
@@ -40,6 +40,9 @@ wa.db
 
 # WhatsApp profile pictures.
 Profile Pictures/
+
+# Thumbnails extracted from the WhatsApp databeses
+thumbnails/
 
 # PDF directory.
 PDF/
