--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Auth: Joe Broesele
 # Mod.: Joe Broesele
 # Date: 28 Apr 2020
-# Rev.: 18 May 2020
+# Rev.: 22 May 2020
 #
 # List of files to be ignored by git.
 #
@@ -36,6 +36,8 @@ msgstore.db
 msgstore_merge.db
 wa.db
 *.db
+*.db-shm
+*.db-wal
 *.crypt12
 
 # Thumbnails extracted from the WhatsApp databases.
