Fixes and improvements.
* Limited the maximum height and width of preview images.
* Increased javascript-delay to 2000 in reports2pdf.sh.
* Added missing 'python3-distutils' to list of prerequisites.
* The Whapa GUI is now resizable.

--- a/cfg/settings.cfg.example
+++ b/cfg/settings.cfg.example
@@ -11,8 +11,10 @@ notes =
 report_prefix = report_
 bg_index = ./images/background-index.png
 bg_report = ./images/background.png
-profile_pics_enable = yes
 preview_pics_size = 100
+preview_pics_max_width = 500
+preview_pics_max_height = 500
+profile_pics_enable = yes
 profile_pics_size_report = 128
 profile_pics_size_index = 48
 profile_pics_dir = ./Media/Profile Pictures/
