--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Auth: Joe Broesele
 # Mod.: Joe Broesele
 # Date: 28 Apr 2020
-# Rev.: 22 May 2020
+# Rev.: 02 Jan 2025
 #
 # List of files to be ignored by git.
 #
@@ -28,8 +28,8 @@
 # WhatsApp backups, databases, media, reports and key.
 Backups/
 Databases/
-Media/
-reports/
+Media*/
+reports*/
 key
 msgstore.db.crypt12
 msgstore.db
